# firewall-python

./: .aikido  .codecov.yml  .editorconfig  .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  README.md  pip-constraints.txt  pyproject.toml  pytest.ini  requirements-dev-py39.txt  requirements-dev.txt  setup.cfg
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Dockerfile.qa  benchmark.yml  end2end.yml  lint.yml  publish-test.yml  publish.yml  qa-tests.yml  smoke-test-ffi.yml  test-publish.yml  unit-test.yml
aikido_firewall/: __init__.py  config.py  init_test.py
aikido_firewall/agent/: __init__.py  agent.py  init_test.py
aikido_firewall/aws_lambda/: __init__.py  events.py  (+6 more)
aikido_zen/: __init__.py  __main__.py  config.py  init_test.py
benchmarks/: flask-mysql-benchmarks.js  nosql_benchmark.py  path_traversal.py  sql_benchmark.py  starlette-benchmarks.js  starlette_benchmark.py
docs/: background_process.md  django.md  django_asgi.md  fastapi.md  flask.md  gunicorn.md  invalid-sql-queries.md  lambda.md  logging.md  proxy.md  quart.md  socket.md  ssrf.md  starlette.md  troubleshooting.md  user.md
end2end/: README.md  __init__.py  attack_events.json  django_asgi_uvicorn_test.py  django_mysql.py  django_mysql_gunicorn.py  django_mysql_gunicorn_test.py  django_mysql_test.py  django_postgres_gunicorn.py  django_postgres_gunicorn_test.py  e2e.sh  fastapi_old_test.py  fastapi_postgres_uvicorn_latest_test.py  fastapi_postgres_uvicorn_old_test.py  fastapi_postgres_uvicorn_test.py  flask_mongo.py  flask_mongo_test.py  flask_mysql.py  flask_mysql_gunicorn_test.py  flask_mysql_test.py  flask_mysql_uwsgi.py  flask_mysql_uwsgi_test.py  flask_postgres.py  flask_postgres_test.py  flask_postgres_xml.py  flask_postgres_xml_lxml_test.py  flask_postgres_xml_test.py  quart_postgres_uvicorn.py  quart_postgres_uvicorn_test.py  requirements.txt  starlette_postgres_uvicorn.py  starlette_postgres_uvicorn_test.py
sample-apps/: README.md  common.mk
sample-apps/django-asgi-uvicorn/: Makefile  README.md  gunicorn_config.py  manage.py  pyproject.toml
sample-apps/django-asgi-uvicorn/sample-django-asgi-uvicorn-app/: asgi.py  settings.py  urls.py  wsgi.py
sample-apps/django-asgi-uvicorn/sample_app/: models.py  urls.py  views.py
sample-apps/django-asgi-uvicorn/sample_app/templates/app/: index.html
sample-apps/django-mysql/: .env.example  Dockerfile  Makefile  Pipfile  README.md  benchmark_patchfile.patch  docker-compose.benchmark.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
sample-apps/django-mysql/sample-django-mysql-app/: asgi.py  settings.py  urls.py  wsgi.py
sample-apps/django-mysql/sample_app/: urls.py  views.py
sample-apps/django-mysql/sample_app/templates/app/: create_dog.html
sample-apps/django-postgres-gunicorn/: Dockerfile  Makefile  README.md  docker-compose.benchmark.yml  docker-compose.yml  gunicorn_config.py  manage.py  pyproject.toml  requirements.txt
sample-apps/django-postgres-gunicorn/sample-django-postgres-gunicorn-app/: asgi.py  settings.py  urls.py  wsgi.py
sample-apps/django-postgres-gunicorn/sample_app/: models.py  urls.py  views.py
sample-apps/django-postgres-gunicorn/sample_app/migrations/: 0001_initial.py
sample-apps/django-postgres-gunicorn/sample_app/templates/app/: index.html
sample-apps/fastapi-old/: Makefile  app.py  pyproject.toml
sample-apps/fastapi-postgres-gunicorn/: Makefile  README.md  app.py  manage.py  pyproject.toml
sample-apps/fastapi-postgres-gunicorn/templates/: dogpage.html  index.html
sample-apps/fastapi-postgres-uvicorn/: Dockerfile  Makefile  README.md  app.py  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml  requirements.txt
sample-apps/fastapi-postgres-uvicorn-latest/: Makefile  app.py  pyproject.toml
sample-apps/fastapi-postgres-uvicorn-latest/templates/: create_dog.html
sample-apps/fastapi-postgres-uvicorn-old/: Makefile  app.py  pyproject.toml
sample-apps/fastapi-postgres-uvicorn/routers/: admin.py  dogs.py  health.py
sample-apps/flask-clickhouse-uwsgi/: Makefile  README.md  app.py  pyproject.toml  uwsgi.ini  uwsgi2.ini
sample-apps/flask-mongo/: .env.example  Dockerfile  Makefile  README.md  app.py  benchmark_patchfile.patch  docker-compose.benchmark.yml  docker-compose.yml  mongo-init.js  pyproject.toml  requirements.txt
sample-apps/flask-mongo/templates/: auth.html  create_dog.html  dogpage.html  index.html
sample-apps/flask-mssql/: Dockerfile  Makefile  README.md  app.py  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml  requirements.txt
sample-apps/flask-mssql/templates/: create_dog.html
sample-apps/flask-mysql-gunicorn/: Makefile  README.md  app.py  pyproject.toml
sample-apps/flask-mysql-gunicorn/templates/: open_file.html
sample-apps/flask-postgres/: .env.example  Dockerfile  Makefile  README.md  app.py  benchmark_patchfile.patch  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml  requirements.txt
sample-apps/odoo-mysql/: Dockerfile  Makefile  README.md  app.py  docker-compose.yml  entrypoint.sh  odoo.conf  pyproject.toml
sample-apps/odoo-mysql/addons/dog_management/: __manifest__.py
sample-apps/odoo-mysql/addons/dog_management/controllers/: main.py
sample-apps/odoo-mysql/templates/: dogpage.html  execute.html  index.html  request.html  shell.html
sample-apps/quart-mongo/: Dockerfile  Makefile  README.md  app.py  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml  requirements.txt
sample-apps/quart-mongo/templates/: auth.html  dogpage.html
sample-apps/quart-postgres-uvicorn/: Dockerfile  Makefile  README.md  app.py  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml  requirements.txt
sample-apps/quart-postgres-uvicorn/templates/: create_dog.html
sample-apps/starlette-postgres-uvicorn/: .env.benchmark  Dockerfile  Makefile  README.md  app.py  docker-compose.benchmark.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py
(+957 files in other folders)
