[tool.poetry]
name = "aikido_firewall"
version = "0.0.9"
description = "Aikido Zen for Python"
authors = ["Aikido"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
importhook = "^1.0.9"
python-dotenv = "^1.0.1"
regex = "^2024.5.15"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
