[tool.poetry]
name = "aikido_zen"
version = "1.0.13"
description = "Aikido Zen for Python"
authors = ["Aikido Security <help@aikido.dev>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
include = ["docs/*"]
keywords = [
    "web application firewall",
    "WAF",
    "cybersecurity",
    "security",
    "firewall",
    "web security",
    "application security",
    "threat detection",
    "intrusion prevention",
    "DDoS protection",
    "malware protection",
    "Python",
    "Python 3",
    "network security",
    "data protection",
    "secure coding",
    "vulnerability management",
    "API security",
    "SSL/TLS",
    "penetration testing",
]

classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
homepage = "https://www.aikido.dev/runtime/firewall/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AikidoSec/firewall-python/issues"
"Source" = "https://github.com/AikidoSec/firewall-python"
"Homepage" = "https://www.aikido.dev/runtime/firewall"
"Bug Bounty" = "https://app.intigriti.com/programs/aikido"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.1"
regex = "^2024.5.15"
requests = "^2.32.3"
packaging = "^24.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mysqlclient = "^2.2.4"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.9"
pytest-asyncio = "^0.24.0"
asyncpg = "^0.29.0"
psycopg = "^3.2.1"
pymongo = "^4.8.0"
cryptography = "^43.0.0"
motor = "^3.5.1"
flask = "^3.0.3"
pygments = "^2.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
