[metadata]
name = aikido_firewall
version = 1.0.0
author = Aikido
author_email = hello@aikido.dev
description = Aikido RASP for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AikidoSec/firewall-python
project_urls =
    Bug Tracker = https://github.com/AikidoSec/firewall-python/issues
    repository = https://github.com/AikidoSec/firewall-python
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src