[project]
name = "django-mysql"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "aikido_zen",
    "django (>=5.1.5,<6.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "cryptography (>=44.0.0,<45.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
