[project]
name = "django-postgres-gunicorn"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "aikido_zen",
    "django (>=5.1.5,<6.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "ddtrace (>=2.19.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
