[project]
name = "fastapi-old"
version = "0.1.0"
description = "Test app with FastAPI 0.70.0 (starlette 0.16.0) to verify route discovery"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "aikido_zen",
    "fastapi (>=0.70.0,<0.71.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
