[project]
name = "fastapi-postgres-uvicorn-old"
version = "0.1.0"
description = "Sample FastAPI app with Postgres (FastAPI 0.70.0, Starlette 0.16.0)"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "aikido_zen",
    "fastapi (>=0.70.0,<0.71.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "cryptography (>=46.0.7,<47.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
