[project]
name = "flask-clickhouse-uwsgi-app"
version = "0.1.0"
description = "Sample app Flask & Clickhouse"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "aikido_zen",
    "uwsgi (>=2.0.28,<3.0.0)",
    "clickhouse-driver (>=0.2.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
