[project]
name = "flask-mongo"
version = "0.1.0"
description = "Sample app Flask Mongo"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "flask (==2.2.4)",
    "requests (>=2.32.3,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "aikido_zen",
    "flask-pymongo (>=2.3.0,<3.0.0)",
    "ddtrace (>=2.19.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
