[project]
name = "flask-mysql-app"
version = "0.1.0"
description = "Sample app Flask MySQL"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-mysql (>=1.6.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "aikido_zen",
    "sentry-sdk (>=2.20.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
