[project]
name = "flask-postgres"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">3.9.1,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "aikido_zen"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../" }
