[project]
name = "quart-mongo"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "aikido_zen",
    "quart (>=0.20.0,<0.21.0)",
    "motor (>=3.6.1,<4.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aikido_zen = { path = "../../", develop = true }
